--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,5 @@
 
 @font-face {
     font-family: "Poppins";
-    src: url("./fonts/Poppins-Regular.ttf");
+    src: url('./assets/fonts/Poppins-Regular.ttf')
   }
